Remove name of system points 2009 GET projects

--- a/views/get.ejs
+++ b/views/get.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %>
 <%- include('partials/main_nav.ejs') %>
-<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 02-12-2024 -->
+<!-- Filename: get.ejs | Author: Juan Arevalo | Date: 03-12-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
 
@@ -1972,7 +1972,7 @@
                         <!-- Project 2-->
                         <div class="timeline-item mb-4">
                             <h6><strong>Securing Competitive Advantage in Cable Shovel GET Supply</strong></h6>
-                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the 85SV2 system, resulting in 32 breakages in one month, causing customer concern and dissatisfaction with our products.</p>
+                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the points, resulting in 32 breakages in one month, causing customer concern and dissatisfaction with our products.</p>
                             <p><strong>Task:</strong> Despite the challenging situation, the objective was to ensure our company was chosen as the preferred supplier over the competitor.</p>
                             <p><strong>Action:</strong></p>
                             <ul>
@@ -2048,7 +2048,7 @@
                         <!-- Project -->
                         <div class="timeline-item mb-4">
                             <h6><strong>Securing Competitive Advantage in Cable Shovel GET Supply</strong></h6>
-                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the 85SV2 system, resulting in 32 breakages in one month, causing customer concern and dissatisfaction with our products.</p>
+                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the points system, resulting in 32 breakages in one month, causing customer concern and dissatisfaction with our products.</p>
                             <p><strong>Task:</strong> Despite the challenging situation, the objective was to ensure our company was chosen as the preferred supplier over the competitor by addressing the breakage issues and demonstrating superior service and value.</p>
                             <p><strong>Action:</strong></p>
                             <ul>
@@ -2071,7 +2071,7 @@
                             <ul style="color: #FF4500;">
                                 <li><strong>DMAIC Methodology (Six Sigma):</strong>
                                     <ul>
-                                        <li><strong>Define:</strong> Frequent breakages of the 85SV2 GET points were causing customer dissatisfaction and risking loss of supplier status.</li>
+                                        <li><strong>Define:</strong> Frequent breakages of the GET points were causing customer dissatisfaction and risking loss of supplier status.</li>
                                         <li><strong>Measure:</strong>
                                             <ul>
                                                 <li>Recorded 32 breakages in one month, indicating a significant reliability issue.</li>
