--- a/views/get.ejs
+++ b/views/get.ejs
@@ -2048,7 +2048,7 @@
                         <!-- Project -->
                         <div class="timeline-item mb-4">
                             <h6><strong>Securing Competitive Advantage in Cable Shovel GET Supply</strong></h6>
-                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the points system, resulting in 32 breakages in one month, causing customer concern and dissatisfaction with our products.</p>
+                            <p><strong>Situation:</strong> A competitive evaluation was underway between our company and a competitor to supply Ground Engaging Tools (GET) for cable shovels. Each company provided GET for two cable shovels operating under similar conditions. The customer planned to assess performance over six months to determine the preferred supplier. During this period, one of our shovels experienced issues with the points system, resulting in several breakages in one month, causing customer concern and dissatisfaction with our products.</p>
                             <p><strong>Task:</strong> Despite the challenging situation, the objective was to ensure our company was chosen as the preferred supplier over the competitor by addressing the breakage issues and demonstrating superior service and value.</p>
                             <p><strong>Action:</strong></p>
                             <ul>
