--- a/views/link.ejs
+++ b/views/link.ejs
@@ -264,6 +264,18 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-tent card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Craft</h5>
+                                            <a href="https://www.craft.do/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-brands fa-jira card-img mt-3 mb-3"
                                             style="font-size: 3.5em; color: black ;"></i>
                                         <div class="card-body">
