--- a/views/link.ejs
+++ b/views/link.ejs
@@ -751,6 +751,18 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-star-of-life card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Claude AI</h5>
+                                            <a href="https://claude.ai/new" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer" aria-label="Claude AI site">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-brands fa-docker card-img mt-3 mb-3"
                                             style="font-size: 3.5em; color: black ;"></i>
                                         <div class="card-body">
