Add new perplexity link

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -737,6 +737,18 @@
                                     </div>
                                 </div>
 
+                                                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-star-of-life card-img mt-3 mb-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Perplexity</h5>
+                                            <a href="https://www.perplexity.ai/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
                                         <i class="fa-solid fa-rainbow card-img mt-3 mb-3"
